new payout type + economy reorganise
