# src/modules/webApi/routes/applyRoutes.ts
@@ -4,8 +4,8 @@ import { JsonObject, serve, setup } from 'swagger-ui-express';
 import { postLogin } from './auth/postLogin.js';
 import { postLogout } from './auth/postLogout.js';
 import { postRefresh } from './auth/postRefresh.js';
-import { postEarnings } from './economy/earnings/postEarnings.js';
-import { getRewards } from './economy/rewards/getRewards.js';
+import { getRewards } from './economy/getRewards.js';
+import { postEarnings } from './economy/postEarnings.js';
 import { getIp } from './miscellaneous/getIp.js';
 import { getRoot } from './miscellaneous/getRoot.js';
 import { registerProvider } from './registerProvider.js';
